# CanvasScraper

./: .env.example  .gitignore  CLAUDE.md  DEV_PLAN.md  README.md  pyproject.toml
canvas_scraper/: canvas_client.py  cli.py  config.py  drive_client.py  scraper.py
